<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp">
    <LinearLayout
        android:id="@+id/linear0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="65dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:fitsSystemWindows="true"
            android:layout_gravity="center"
            android:src="@drawable/logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_to_nhidcl_directory"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pswd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pin"
            android:inputType="numberPassword" />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>
        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary_dark"
            android:textIsSelectable="true"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:text="@string/forgot_password"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/or"/>
        <Button
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/problem"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/emailh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:backgroundTint="@color/white"
            android:src="@android:drawable/ic_dialog_email"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/phoneh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/white"
            android:rotation="270"
            android:src="@android:drawable/sym_action_call"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>